--- a/partials/cv.html
+++ b/partials/cv.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Skills <small></small></h1>
+	<h1>Technical Skills <small></small></h1>
 </div>
 
 <dl class="dl-horizontal">
@@ -39,11 +39,9 @@
 </dl>
 
 <dl class="dl-horizontal">
-  <dt>Frameworks (Java)</dt>
+  <dt>Mobile<dt>
   <dd>
-  	<span class="label label-info">Spring</span>
-  	 <span class="label label-info">JEE</span>
-  	<span class="label label-info">J2ME</span>
+   	<span class="label label-info">J2ME</span>
   	 <span class="label label-info">Android SDK</span>
   </dd>
 </dl>
@@ -67,7 +65,37 @@
 </dl>
 
 <br>
-
+<div class="page-header">
+	<h1>Languages<small></small></h1>
+</div>
+<div class="row">
+	<div class="span10">
+<dl class="dl-horizontal">
+  <dt>Arabic</dt>
+  <dd>
+  	<span class="label label-warning">Mother Tongue</span>
+  </dd>
+</dl>
+<dl class="dl-horizontal">
+  <dt>English</dt>
+  <dd>
+  	<span class="label label-warning">Fluent</span>
+  </dd>
+</dl>
+<dl class="dl-horizontal">
+  <dt>French</dt>
+  <dd>
+  	<span class="label label-warning">Fluent</span>
+  </dd>
+</dl>
+<dl class="dl-horizontal">
+  <dt>German</dt>
+  <dd>
+  	<span class="label label-warning">Basic</span>
+  </dd>
+</dl>
+	</div>
+</div>
 <div class="page-header">
 	<h1>Professional Experience<small></small></h1>
 </div>
@@ -166,13 +194,4 @@
 
 <br>
 
-<div class="row">
-	<div class="span2 lead">Languages</div>
-	<div class="span10">
-		<span class="lead">Arabic - Mother tongue</span><br>
-		<span class="lead">English - Fluent</span><br>
-		<span class="lead">French - Fluent</span><br>
-		<span class="lead">German - Basic</span><br>
-	</div>
-</div>
   </div>
