--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div class="hero-unit intro">
-<img src="images/face160.jpg" class="pull-left faceImage img-circle"/>
+<img src="images/elmo05.png" width="60px" height="60px" class="pull-left faceImage img-circle"/>
 <p class="text">Walid Saad is a Java/JEE developer, who loves coding in many languages.
 He is a polymath, passionate about technology and open to new opportunities.</p>
 </div>
