--- a/partials/projects.html
+++ b/partials/projects.html
@@ -7,10 +7,10 @@
       <li>Three-tiers architecture</li>
       <li>Web-tier in JSF, Html5</li>
       <li>Desktop client in Swing</li>
-      <li>Keywords: JBoss, JEE, EJB, JPA+Hibernate, JSF+Primefaces, JUnit, Swing, JavaMail, MySQL.</li>
+      <li><b>Keywords</b>: JBoss, JEE, EJB, JPA+Hibernate, JSF+Primefaces, JUnit, Swing, JavaMail, MySQL.</li>
     </ul>
 		<br />
-		<a href="">My contributions</a>
+
 	</div>
 </div>
 <hr>
@@ -22,10 +22,9 @@
     <ul>
       <li>Realtime detection and classification of domotic devices.</li>
       <li> Web interface to browse and search available devices and their services based on many criteria.</li>
-      <li>Keywords: JBOSS, JEE, JSF+Primefaces, XML, Atmosphere Framework, Semantic Web Technologies, Maven, UPnP</li>
+      <li><b>Keywords</b>: JBOSS, JEE, JSF+Primefaces, XML, Atmosphere Framework, Semantic Web Technologies, Maven, UPnP</li>
     </ul>
 			<br />
-			<a href="">My contributions</a>
 	</div>
 </div>
 <hr>
@@ -44,8 +43,7 @@
 	<div class="span2"><img class="well" src="images/quiz.jpg" alt="Quiz Generator"></div>
 	<div class="span9 offset1">
 		<span class="lead"><a href="">Quiz Generator</a></span><br />
-		Keywords: Java SE, JDBC, Swing, JFreeChart, Apache Commons, MySQL
+		<b>Keywords</b>: Java SE, JDBC, Swing, JFreeChart, Apache Commons, MySQL
 		<br />
-		<a href="">My contributions</a>
 	</div>
 </div>
