--- a/partials/cv.html
+++ b/partials/cv.html
@@ -13,18 +13,6 @@
   </dd>
 </dl>
 
-<dl class="dl-horizontal">
-	<dt>Tools</dt>
-	<dd>
-		<span class="label label-info">Eclipse</span>
-		<span class="label label-info">NetBeans</span>
-		<span class="label label-info">CheckStyle</span>
-		<span class="label label-info">StarUML</span>
-		<span class="label label-info">Git</span>
-		<span class="label label-info">Maven</span>
-
-	</dd>
-</dl>
 
 <dl class="dl-horizontal">
 	<dt>Web</dt>
@@ -64,6 +52,18 @@
   </dd>
 </dl>
 
+<dl class="dl-horizontal">
+	<dt>Tools</dt>
+	<dd>
+		<span class="label label-info">Eclipse</span>
+		<span class="label label-info">NetBeans</span>
+		<span class="label label-info">CheckStyle</span>
+		<span class="label label-info">StarUML</span>
+		<span class="label label-info">Git</span>
+		<span class="label label-info">Maven</span>
+
+	</dd>
+</dl>
 <br>
 <div class="page-header">
 	<h1>Languages<small></small></h1>
@@ -107,7 +107,7 @@
 </div>
 
 <div class="row">
-	<div class="span2"><img class="well" src="images/esprit_logo.gif" alt="Bull"></div>
+	<div class="span2"><img class="well" width="100px" width="100px" src="images/esprit_logo.gif" alt="Bull"></div>
 	<div class="span10">
 		<p>
 			<span class="lead">Graduation Project, EspriTech</span> <br>
@@ -138,7 +138,7 @@
 <hr>
 
 <div class="row">
-	<div class="span2"><img class="well" src="images/gct.jpg" alt="gct"></div>
+	<div class="span2"><img class="well" src="images/gct.jpg" width="100px" height="100px" alt="gct"></div>
 	<div class="span10">
 		<p>
 			<span class="lead">Internship, Groupe Chimique Tunisien</span> <br>
