--- a/partials/home.html
+++ b/partials/home.html
@@ -7,7 +7,7 @@ He is a polymath, passionate about technology and open to new opportunities.</p>
 <p class="lead">Follow Me</p>
 <div class="row">
 <div class="span1">
-<a href="http://twitter.com/walidsa3d"><img class="well" src="assets/img/twitter.png" alt="Twitter"></a>
+<a href="http://twitter.com/walidsa3d"><img class="well" src="assets/img/twitter.jpg" alt="Twitter"></a>
 </div>
     <div class="span9" style="margin-left:60px">
         <p class="lead">My tweets, they're not professional at all</p>
@@ -25,16 +25,7 @@ He is a polymath, passionate about technology and open to new opportunities.</p>
 </div>
 <div class="row">
     <div class="span1">
-        <a href="https://speakerdeck.com/walidsa3d"><img class="well" src="assets/img/speakerdeck-60.png" alt="Speaker Deck"></a>
-    </div>
-    <div class="span9" style="margin-left:60px">
-        <p class="lead">My Presentations</p>
-        <p class="lead"><a href="https://speakerdeck.com/walidsa3d">Speaker Deck</a></p>
-    </div>
-</div>
-<div class="row">
-    <div class="span1">
-        <a href="http://linkedin.com/in/walidsa3d"><img class="well" src="assets/img/linkedin.png" alt="Lanyrd"></a>
+        <a href="http://linkedin.com/in/walidsa3d"><img class="well" src="assets/img/linkedin.jpg" alt="Lanyrd"></a>
     </div>
     <div class="span9" style="margin-left:60px">
         <p class="lead">My not-so-developed LinkedIn profile</p>
