--- a/partials/home.html
+++ b/partials/home.html
@@ -7,7 +7,7 @@ He is a polymath, passionate about technology and open to new opportunities.</p>
 <p class="lead">Follow Me</p>
 <div class="row">
 <div class="span1">
-<a href="http://twitter.com/walidsa3d"><img class="well" src="assets/img/twitter.jpg" alt="Twitter"></a>
+<a href="http://twitter.com/walidsa3d"><img class="well" width="60" height="60" src="assets/img/twitter.jpg" alt="Twitter"></a>
 </div>
     <div class="span9" style="margin-left:60px">
         <p class="lead">My tweets, they're not professional at all</p>
