--- a/partials/blogfeed.html
+++ b/partials/blogfeed.html
@@ -1,3 +1,5 @@
+
+<h1>My Blog Feed</h1>
 <ul>
   <li ng-repeat="feed in feeds">
     <h5><a href="{{feed.link}}" target="_blank">{{feed.title}}</a></h5>
