--- a/partials/projects.html
+++ b/partials/projects.html
@@ -1,3 +1,4 @@
+    <h1>My Portfolio</h1>
     <div class="row">
 	<div class="span2"><img class="well" src="images/travel-logos.png" alt="SmartHome"></div>
   <div class="span9 offset1">
