--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -1,7 +1,7 @@
   <div class="navbar navbar-static-top banner">
     <div class="navbar-inner">
       <div class="container">
-        <span class="brand"><a href="index.html">Walid<b>Saad</b></a></span>
+        <span class="brand"><a href="index.html"><b>Walid Saad</b></a></span>
       </div>
       <div class="container">
         <ul class="nav pull-left">
