--- a/partials/downloads.html
+++ b/partials/downloads.html
@@ -1,8 +1,8 @@
+<h1>Downloads</h1>
  <div class="row">
 <div class="span12">
-<a href="#" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download English Resume</a>
+<a href="#" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-circle-arrow-down"></span>English Resume</a>
 <hr>
-<a href="assets/walid-saad-cv.pdf" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download French Resume</a>
-
+<a href="assets/walid-saad-cv.pdf" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-circle-arrow-down"></span> French Resume</a>
 </div>
 </div>
