altered projects description

--- a/partials/projects.html
+++ b/partials/projects.html
@@ -5,9 +5,9 @@
 		<span class="lead"><a href="https://github.com/walidsa3d/hajj-travel-agency">Travel Agency Management Software</a></span><br />
     <ul>
       <li>Teamwork using the Scrum agile methodology (team of 4)</li>
-      <li>Three-tiers architecture</li>
-      <li>Web-tier in JSF, Html5</li>
-      <li>Desktop client in Swing</li>
+      <li>Created GUIs for the management of travelers, flights, hotel reservations and offers</li>
+      <li>Created a role-based authentification system for the desktop application</li>
+      <li>Created an audit system to log all operations</li>
       <li><b>Keywords</b>: JBoss, JEE, EJB, JPA+Hibernate, JSF+Primefaces, JUnit, Swing, JavaMail, MySQL.</li>
     </ul>
 		<br />
@@ -44,6 +44,10 @@
 	<div class="span2"><img class="well" src="images/quiz.jpg" alt="Quiz Generator"></div>
 	<div class="span9 offset1">
 		<span class="lead"><a href="">Quiz Generator</a></span><br />
+		  <ul>
+      <li>Tests are randomly generated from a database</li>
+      <li></li>
+    </ul>
 		<b>Keywords</b>: Java SE, JDBC, Swing, JFreeChart, Apache Commons, MySQL
 		<br />
 	</div>
