--- a/partials/projects.html
+++ b/partials/projects.html
@@ -46,7 +46,7 @@
 		<span class="lead"><a href="">Quiz Generator</a></span><br />
 		  <ul>
       <li>Tests are randomly generated from a database</li>
-      <li></li>
+      <li>Tests are graded and results are sent by emails</li>
     </ul>
 		<b>Keywords</b>: Java SE, JDBC, Swing, JFreeChart, Apache Commons, MySQL
 		<br />
