--- a/partials/skills.html
+++ b/partials/skills.html
@@ -22,6 +22,7 @@
 		<span class="label label-info">PHP</span>
 		<span class="label label-info">Wordpress</span>
 		<span class="label label-info">AngularJS</span>
+		<span class="label label-info">Twitter Bootstrap</span>
 		<span class="label label-info">Semantic Web</span>
 	</dd>
 </dl>
